<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="job_compare">JobCompare</string>
    <string name="enter_job">Enter Job Details</string>
    <string name="update_job">Update Job Details</string>
    <string name="adjust_setting">Adjusting The Comparison Settings</string>
    <string name="compare">Compare Job Offers</string>
    <string name="placeholder">[Exit]</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="livingcost">Cost of Living</string>
    <string name="yearlySalary">Yearly Salary</string>
    <string name="yearlyBonus">Yearly Bonus</string>
    <string name="enter_index_number">Cost of living index number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="number_decimal">Decimal number</string>
    <string name="trainingFund">Training and Development Fund</string>
    <string name="leaveTime">Leave Time</string>
    <string name="telework">Telework Days per Week</string>
    <string name="integer">Integer number</string>
    <string name="currentJob">Current Job</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_job">Select Job</string>
    <string name="change_the_weights">Change the weights (0-9):</string>
    <string name="one">1</string>
    <string name="select_to_compare">Select two jobs to compare:</string>
    <string name="rank_table_title">Jobs ranked from high to low score:</string>
    <string name="id">ID</string>
    <string name="score">Score</string>
    <string name="select_job1">Select Job1</string>
    <string name="select_job2">Select Job2</string>
    <string name="Compare">Compare</string>
    <string name="job1">Job1</string>
    <string name="job2">Job2</string>
    <string name="select_two_different_jobs">Select two different jobs!</string>
</resources>
